--- a/todo
+++ b/todo
@@ -5,14 +5,14 @@
 + support build step
 + support watch
 + support TS
++ provide cli
++ publish gkp and @gkp/bcrypt?
 - add overrideApiVersion
 - fix __filename and __dirname
-- provide cli
 - setup different verbosity levels
 - support Sucrase / swc / something else
 - fix TODO's in the code
 - suport es6 modules
-- publish gkp and @gkp/bcrypt?
 - support @package/foo overrides
 - use relative paths instead of absoulute ones: /home/user/projets... -> ../../node_modules/lib-a
 - support analyze (output require related problems in given project probably with suggested gkp-overrides)
